# openclaw-turboquant

./: .gitignore  CHANGELOG.md  DOCS_INDEX.md  LICENSE  QUICKSTART_ZH.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_turboquant.py
docs/: CLI_MANUAL.md  CLI_MANUAL_ZH.md
plugin/: index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
skills/turboquant/: SKILL.md
src/openclaw_turboquant/: __init__.py  cli.py  codebook.py  context_engine.py  qjl.py  quantizer.py  rotation.py
tests/: test_turboquant.py
