[project]
name = "openclaw-turboquant"
version = "0.1.0"
description = "Near-optimal online vector quantization for OpenClaw context compression"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Twacqwq", email = "xiaot.qaq@gmail.com" },
    { name = "hucc", email = "huccc2551@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "scipy>=1.17.1",
]
keywords = ["quantization", "vector", "compression", "openclaw", "context-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
openclaw-turboquant = "openclaw_turboquant.cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.8",
    "scipy-stubs>=1.17.1.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TC", "RUF"]
ignore = ["TC002", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
